# transformerPractice

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/: attention.hpp  embedding.hpp  feed_forward.hpp  layer_norm.hpp
src/: CMakeLists.txt  attention.cpp  embedding.cpp  feed_forward.cpp  layer_norm.cpp
tests/: CMakeLists.txt  test_attention.cpp  test_embedding.cpp  test_feed_forward.cpp  test_layer_norm.cpp  test_multihead_attention.cpp
